# vulkan-begin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: README.md
src/: CMakeLists.txt
src/Runtime/: CMakeLists.txt  CMakelists.txt
src/Runtime/Series/: a_dev_envir.cpp  b_base_code.cpp  c_instance.cpp  d_validation_layers.cpp  e_physical_devices_and_queue_families.cpp  f_logical_device_and_queues.cpp  g_window_surface.cpp  h_swap_chain.cpp  i_image_views.cpp  index.h  j_shader_modules.cpp  k_fixed_functions.cpp  l_render_passes.cpp  m_conclusion.cpp  n_create_frame_buffers.cpp  o_command_buffers.cpp  p_rendering_presentation.cpp  q_swap_chain_recreation.cpp  r_descriptor_layout_buffer.cpp  s_staging_buffer.cpp  t_index_buffer.cpp
src/Runtime/VulkanLib/: VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanInstance.cpp  VulkanInstance.h  VulkanLog.cpp  VulkanLog.h  VulkanMacro.h  VulkanPipelineShaderStage.cpp  VulkanPipelineShaderStage.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanShaderModule.cpp  VulkanShaderModule.h  VulkanSwapChain.cpp  VulkanSwapChain.h
src/Shader/: CMakeLists.txt
src/Shader/glsl/: r_descriptor_layout_buffer.frag  (+1 more)
src/Vendors/: CMakeLists.txt  CMakelists.txt
test/: CMakeLists.txt  test.cpp
test/00_dev_envir/: CMakeLists.txt  main.cpp
test/01_base_code/: CMakeLists.txt  main.cpp
test/02_instance/: CMakeLists.txt  main.cpp
test/03_validation_layers/: CMakeLists.txt  main.cpp
