if(NOT TARGET gtest_main)
    option(gtest_disable_pthreads "Disable uses of pthreads in gtest." ON)
    add_subdirectory(googletest)
    set_target_properties(gtest_main PROPERTIES FOLDER Vendors/googletest)
    set_target_properties(gtest PROPERTIES FOLDER Vendors/googletest)
    set_target_properties(gmock PROPERTIES FOLDER Vendors/googletest)
    set_target_properties(gmock_main PROPERTIES FOLDER Vendors/googletest)
endif()


if(NOT TARGET glfw)
    option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
    option(GLFW_BUILD_EXAMPLES "Build the GLFW example programs" OFF)
    option(GLFW_BUILD_TESTS "Build the GLFW test programs" OFF)
    option(GLFW_BUILD_DOCS "Build the GLFW documentation" OFF)
    option(GLFW_INSTALL "Generate installation target" OFF)
    add_subdirectory(glfw)
    set_target_properties(glfw PROPERTIES FOLDER Vendors/glfw)
    set_target_properties(update_mappings PROPERTIES FOLDER Vendors/glfw)
endif()

if(NOT TARGET glm)
    option(BUILD_STATIC_LIBS "" ON)
    option(BUILD_TESTING "" OFF)
    option(GLM_TEST_ENABLE "" OFF)
    add_subdirectory(glm)
    set_target_properties(glm_static PROPERTIES FOLDER Vendors/glm)
    set_target_properties(uninstall PROPERTIES FOLDER Vendors/glm)
endif()


if(NOT TARGET cpp-utilities-algorithm)
    add_subdirectory(cpp-utilities)
endif()